ingress-rabbitmq.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "rabbitmq.master.zilchms.de"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmqmarkus
            port:
              number: 15672
